new chatbox day 21

--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
 	</div>
 
 	<div class="second-page">
+		<ul class="message-container">
+
+			<!-- <ul class="sent-messages">
+			</ul> -->
+
+			</ul>
 		<div class="chatBox-container">
-			<div class="chatBox">
+			<div class="chatBox"></div>
 				<input id="message-input" type="text" name="name" value="" placeholder="message">
 				<button id="message-btn" type="button" name="button">send</button>
-			</div>
 		</div>
 
-		<div class="message-container">
 
-			<ul class="sent-messages">
-			</ul>
-		</div>
 	</div>
 
 
